--- a/quizApp/resources/css/app.css
+++ b/quizApp/resources/css/app.css
@@ -1,6 +1,8 @@
 @import 'tailwindcss';
 
 @import './loadquiz.css';
+@import './mainPage.css';
+@import './quizmaking.css';
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
